Fixes bug #11815. Convert file path to UNIX format to build correct query string while replicating LOAD DATA INFILE statement.